# e-learning-managemt-system

./: .gitignore  README.md
backend/: Dockerfile  config.py  database.py  main.py  migrate.py  pyproject.toml  render.yaml
backend/app/: config.py  database.py  main.py  migrate.py
backend/app/models/: courses.py  instructors.py  users.py
backend/app/routes/: auths.py  courses.py  instructors.py  users.py
backend/app/utils/: auths.py
backend/migrations/: 0001_create_users.sql  0002_create_instructors.sql  0003_create_courses.sql  0004_create_refresh_tokens.sql
backend/tests/: conftest.py  docker-compose.test.yml  test_auth.py  test_courses_crud.py  test_instructors_crud.py  test_users_crud.py
frontend/: next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/api/backend/[...path]/: route.ts
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/instructor/[instructor_id]/courses/: page.tsx
frontend/app/register/: page.tsx
frontend/components/custom/: AddCourseModal.tsx  AddInstructorModal.tsx  AddUserModal.tsx  CourseTable.tsx  EditCourseModal.tsx  EditInstructorModal.tsx  EdituserModal.tsx  InstructorTable.tsx  LoginForm.tsx  NavBar.tsx  RegisterForm.tsx  SearchInput.tsx  TableRowMenu.tsx  UserTable.tsx
frontend/components/ui/: avatar.tsx
frontend/lib/: constants.ts
frontend/lib/apis/: auths.ts  client.ts  courses.ts  instructors.ts  users.ts
frontend/lib/context/: SessionContext.tsx
frontend/lib/types/: auths.ts  common.ts  courses.ts  instructors.ts
(+1 files in other folders)
