[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.49.0",
]
